[tool.poetry]
name = "yelpgoogletool"
version = "1.0.0"
description = "A python package that can search for restaurants, report info about them and show direction to them."
authors = ["Gan <gy2277@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
