[tool.poetry]
name = "yelpgoogletool"
version = "1.0.0"
description = "A python package that can search for restaurants, report info about them and show direction to them."
authors = ["Gan <gy2277@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
requests = "^2.25.0"
geocoder = "^1.38.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
